--- a/Appendix-a.tex
+++ b/Appendix-a.tex
@@ -1,4 +1,4 @@
-\chapter{WG model utilized in RSCAD}
+\chapter{WG model utilized in RSCAD}\label{Appendix_A}
 
 The Type-4 \gls{WG} model is utilized for the thesis work and the complete implementation of the model is described in this section. 
 
