--- a/references_3.bib
+++ b/references_3.bib
@@ -1,4 +1,13 @@
 
+@misc{noauthor_mmc_nodate,
+	title = {{MMC} {Modeling}},
+	url = {http://knowledge.rtds.com/hc/en-us/articles/360039628773},
+	abstract = {Modular Multilevel Converters (MMCs) offer many advantages over conventional thyristor-based schemes and are becoming widely used in HVDC and FACTS applications. They also present significant chall...},
+	language = {en-US},
+	urldate = {2020-09-26},
+	journal = {RTDS Technologies}
+}
+
 @misc{noauthor_worlds_nodate,
 	title = {World’s {Most} {Powerful} {Offshore} {Wind} {Turbine}: {Haliade}-{X} 12 {MW} {\textbar} {GE} {Renewable} {Energy}},
 	url = {https://www.ge.com/renewableenergy/wind-energy/offshore-wind/haliade-x-offshore-turbine},
@@ -1077,7 +1086,6 @@ FileManager acts as the “home page” of the RSCAD software. It provides a spa
 	keywords = {MMC converters, PWM, VSC},
 	pages = {223--269}
 }
-
 @inproceedings{torres_comparison_2018,
 	address = {Concepcion},
 	title = {Comparison {Between} {Voltage} {Droop} and {Voltage} {Margin} {Controllers} for {MTDC} {Systems}},
@@ -1097,6 +1105,7 @@ FileManager acts as the “home page” of the RSCAD software. It provides a spa
 	title = {Composition and classification of the microgrid},
 	pages = {17}
 }
+
 @article{rocabert_control_2012,
 	title = {Control of {Power} {Converters} in {AC} {Microgrids}},
 	volume = {27},
@@ -1654,7 +1663,6 @@ FileManager acts as the “home page” of the RSCAD software. It provides a spa
 	month = feb,
 	year = {2020}
 }
-
 @book{ali_wind_2012,
 	address = {Boca Raton, FL},
 	title = {Wind energy systems: {Solutions} for power quality and stabilization.},
@@ -1662,6 +1670,7 @@ FileManager acts as the “home page” of the RSCAD software. It provides a spa
 	author = {Ali, M.H.},
 	year = {2012}
 }
+
 @book{bose_power_2006,
 	title = {Power {Electronics} {And} {Motor} {Drives},},
 	isbn = {978-0-12-088405-6},
