--- a/report.bib
+++ b/report.bib
@@ -173,3 +173,20 @@ The simulator-Hardware,
   year={2019},
   publisher={Springer Nature}
 }
+
+@techreport{cigre_B455,
+  address = {},
+  type = {Technical Brochure},
+  title = {{HVDC Connection of Offshore Wind Power Plants}},
+  language = {en},
+  institution = {CIGRE Working Group B4.55},
+  number = {619},
+  year = {2015}
+}
+
+@phdthesis{saad2015modelisation,
+  title={Mod{\'e}lisation et simulation d'une liaison HVDc de type VSC-MMC},
+  author={Saad, Hani Aziz},
+  year={2015},
+  school={{\'E}cole Polytechnique de Montr{\'e}al}
+}
