--- a/report.tex
+++ b/report.tex
@@ -108,7 +108,7 @@
 \newglossaryentry{PI}{name={PI}, description={Proportional Integral}}
 \newglossaryentry{IGBT}{name={IGBT}, description={Insulated Gate Bipolar Transistors}}
 \newglossaryentry{PWM}{name={PWM}, description={Pulse Width Modulation}}
- 
+\newglossaryentry{HV}{name={HV}, description={High Voltage}}
 
 \glstoctrue
 
@@ -122,13 +122,13 @@
 
 \frontmatter
 
-\title{Development of a Generic Model for Real Time Simulation and Assessment of the Dynamic Performance of a Large Scale Offshore Transmission Network}
+%\title{Development of a Generic Model for Real Time Simulation and Assessment of the Dynamic Performance of a Large Scale Offshore Transmission Network}
 
 
-\author{Saran Ganesh}
+%\author{Saran Ganesh}
 \affiliation{Technische Universiteit Delft}
-\coverimage{cover.jpg}
-%\makecover
+\coverimage{Saran_cover.svg}
+\makecover
 
 %% Include an optional title page.
 %\input{title}
